# hero

./: .clang-format  .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE  README.md
doc/: any.md  assert.md  atomic.md  binary.md  bit.md  buffer.md  callback.md  config.md  encoding.md  error.md  file.md  fixed.md  folder.md  format.md  generic.md  indices.md  integer.md  interface.md  library.md  memory.md  number.md  object.md  pack.md  parser.md  path.md  platform.md  regex.md  segment.md  signed.md  slice.md  stat.md  storage.md  stream.md  string.md  structure.md  text.md  thread.md  time.md  timer.md  tokenizer.md  (+2 more)
src/: export.cpp  export.h  main.cpp  main.h
src/hero/: algorithm.cpp  algorithm.h  any.cpp  any.h  assert.cpp  assert.h  atomic.cpp  atomic.h  binary.cpp  binary.h  bit.cpp  bit.h  buffer.cpp  buffer.h  callback.cpp  callback.h  config.cpp  config.h  encoding.cpp  encoding.h  error.cpp  error.h  file.cpp  file.h  fixed.cpp  fixed.h  folder.cpp  folder.h  format.cpp  format.h  generic.cpp  generic.h  hero.cpp  hero.h  indices.cpp  indices.h  integer.cpp  integer.h  interface.cpp  interface.h  (+54 more)
